fix position on iPhone

--- a/style.css
+++ b/style.css
@@ -633,6 +633,12 @@ h5::selection {
 .mobilenav__overflow {
   height: 100%;
   overflow: hidden;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .mobilenav {
